<resources>
    <string name="app_name">ViewXML RandomUsr</string>
    <string name="home_error">Error! Try Again</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_hint">Content Hint</string>
    <string name="email">Email:</string>
    <string name="cell">Cell:</string>
    <string name="nationality">Nationality:</string>
    <string name="location">Location:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="latitude">Latitude:</string>
</resources>