<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.UserDetailsFragment"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/standart_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src = "@drawable/recycler_view_placeholder"
            />
        <TextView
            android:id="@+id/user_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/standart_margin"
            android:layout_marginEnd="@dimen/standart_margin"
            android:layout_marginTop="@dimen/standart_small_margin"
            android:textSize="@dimen/large_text"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/standart_margin"
            android:layout_marginEnd="@dimen/standart_margin"
            android:layout_marginTop="@dimen/standart_small_margin"
            android:textSize="@dimen/super_large_text"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/user_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/standart_margin"
            android:layout_marginEnd="@dimen/standart_margin"
            android:layout_marginTop="@dimen/standart_small_margin"
            android:textSize="@dimen/large_text"
            android:textStyle="italic"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/standart_margin"
        android:layout_marginTop="@dimen/standart_small_margin"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        >

        <TextView
            android:id="@+id/label_user_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/label_style"
            android:text="@string/email"
            />
        <TextView
            android:id="@+id/user_email"
            app:layout_constraintTop_toBottomOf="@id/label_user_email"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            style="@style/content_style" />
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/label_user_email"
            app:layout_constraintStart_toEndOf="@id/user_email"
            android:src="@drawable/baseline_touch_app_24"
            style="@style/icon_style">
        </ImageView>

        <TextView
            android:id="@+id/label_user_cell"
            style="@style/label_style"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cell"
            />
        <TextView
            android:id="@+id/user_cell"
            app:layout_constraintTop_toBottomOf="@id/label_user_cell"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/label_user_cell"
            app:layout_constraintStart_toEndOf="@id/user_cell"
            android:src="@drawable/baseline_touch_app_24"
            style="@style/icon_style">
        </ImageView>

        <TextView
            android:id="@+id/label_user_nat"
            style="@style/label_style"
            app:layout_constraintTop_toBottomOf="@id/user_cell"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/nationality"
            />
        <TextView
            android:id="@+id/user_nat"
            app:layout_constraintTop_toBottomOf="@id/label_user_nat"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />

        <TextView
            android:id="@+id/label_user_location"
            style="@style/label_style"
            app:layout_constraintTop_toBottomOf="@id/user_nat"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/location"
            />
        <TextView
            android:id="@+id/user_country"
            app:layout_constraintTop_toBottomOf="@id/label_user_location"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />
        <TextView
            android:id="@+id/user_state"
            app:layout_constraintTop_toBottomOf="@id/user_country"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />
        <TextView
            android:id="@+id/user_city"
            app:layout_constraintTop_toBottomOf="@id/user_state"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />
        <TextView
            android:id="@+id/user_street_name"
            app:layout_constraintTop_toBottomOf="@id/user_city"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/content_hint"
            style="@style/content_style" />
        <TextView
            android:id="@+id/user_street_num"
            app:layout_constraintTop_toBottomOf="@id/user_city"
            app:layout_constraintStart_toEndOf="@id/user_street_name"
            android:hint="@string/content_hint"
            style="@style/content_style"
            android:layout_marginStart="@dimen/standart_margin"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coords_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_street_name"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            >
            <TextView
                android:id="@+id/label_user_lat"
                style="@style/label_style"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/latitude"
                />
            <TextView
                android:id="@+id/label_user_long"
                style="@style/label_style"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_lat"
                android:text="@string/latitude"
                android:layout_marginStart="@dimen/standart_margin"
                />
            <TextView
                android:id="@+id/user_lat"
                app:layout_constraintTop_toBottomOf="@id/label_user_lat"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/content_hint"
                style="@style/content_style"
                />
            <TextView
                android:id="@+id/user_long"
                app:layout_constraintTop_toBottomOf="@id/label_user_long"
                app:layout_constraintStart_toStartOf="@id/label_user_long"
                android:hint="@string/content_hint"
                style="@style/content_style"
                />
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_long"
                android:src="@drawable/baseline_touch_app_24"
                style="@style/icon_style">
            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>